the_project_spa/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theproject-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theproject
  template:
    metadata:
      labels:
        app: theproject
    spec:
      containers:
        - name: theproject
          image: the-project:1.01
          imagePullPolicy: "IfNotPresent"
