the_project_spa/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: theproject-svc
spec:
  type: ClusterIP
  selector:
    app: theproject
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 80
