the_project_spa/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: theproject-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: theproject-svc
                port:
                  number: 1234
            pathType: Prefix
            path: /
